--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <title>Venda da Vila</title>
 </head>
 
@@ -18,18 +19,36 @@
                 <img src="images/logo.png" alt="Logo">
             </a>
             <nav class="navbar">
-                <a href="#">Home</a>
-                <a href="about">Sobre</a>
-                <a href="menu">Menu</a>
-                <a href="review">Avaliações</a>
-                <a href="address">Endereço</a>
+                <a href="#home">Home</a>
+                <a href="#about">Sobre</a>
+                <a href="#menu">Menu</a>
+                <a href="#review">Avaliações</a>
+                <a href="#address">Endereço</a>
             </nav>
             <div class="icons">
-                <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffffff/shopping-cart--v1.png" alt="shopping-cart--v1"/> 
-                <img width="30" height="30" src="https://img.icons8.com/ios-filled/50/ffffff/search--v1.png" alt="search--v1"/>
+                <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffffff/shopping-cart--v1.png"
+                    alt="shopping-cart--v1" />
+                <img width="30" height="30" src="https://img.icons8.com/ios-filled/50/ffffff/search--v1.png"
+                    alt="search--v1" />
             </div>
         </section>
     </header>
+    <div class="home-container">
+        <section id="#home">
+            <div class="content">
+                <h3>CODE COM O <BR>MELHOR CAFÉ</BR>DA REGIÃO</h3>
+                <P>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt praesentium sit at blanditiis
+                    error, asperiores similique! Nihil voluptates, asperiores, hic sequi beatae modi, error porro
+                    dolorem aliquam id excepturi adipisci?
+                </P>
+                <a href="#" class="btn">Pegue o seu Agora</a>
+            </div>
+        </section>
+    </div>
+    <section class="about" id="about">
+
+    </section>
 </body>
 
 </html>
