--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
         </section>
     </div>
     <section class="about" id="about">
+        <h2 class="title"><span>Sobre</span> Nós</h2>
+        <div class="row">
+            <div class="container-image">
+                <img src="images/about-img.jpg" alt="sobre-nos">
+            </div>
+            <div class="content">
+                <h3>O Que Faz Nosso Café Especial</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia alias consectetur iste ducimus ab. Provident doloremque id nisi incidunt ratione sunt, sapiente autem magnam modi quia, aliquid, reprehenderit temporibus assumenda.</p>
+                 <a href="#" class="btn">Saiba Mais</a>
+            </div>
+        </div>
 
     </section>
 </body>
