--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <section>
-            <a href="#" class="logo">
+            <a href="C:\Users\jonas\Documents\estudos\coffe-store\index.html" class="logo">
                 <img src="images/logo.png" alt="Logo">
             </a>
             <nav class="navbar">
