--- a/index.html
+++ b/index.html
@@ -54,9 +54,13 @@
             </div>
             <div class="content">
                 <h3>O Que Faz Nosso Café Especial</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia alias consectetur iste ducimus ab. Provident doloremque id nisi incidunt ratione sunt, sapiente autem magnam modi quia, aliquid, reprehenderit temporibus assumenda.</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus consequuntur doloribus dicta harum dolorum, vitae accusantium fugiat fugit quam dolore. Animi eveniet illo commodi adipisci voluptatum minus blanditiis quasi incidunt.</p>
-                 <a href="#" class="btn">Saiba Mais</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia alias consectetur iste ducimus ab.
+                    Provident doloremque id nisi incidunt ratione sunt, sapiente autem magnam modi quia, aliquid,
+                    reprehenderit temporibus assumenda.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus consequuntur doloribus dicta
+                    harum dolorum, vitae accusantium fugiat fugit quam dolore. Animi eveniet illo commodi adipisci
+                    voluptatum minus blanditiis quasi incidunt.</p>
+                <a href="#" class="btn">Saiba Mais</a>
             </div>
         </div>
 
@@ -107,57 +111,81 @@
         <div class="box-container">
             <div class="box">
                 <img src="images/quote-img.png" alt="destaque">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus non ad porro atque quisquam pariatur distinctio sint similique ipsa nisi labore impedit, beatae, reiciendis neque minima recusandae mollitia necessitatibus exercitationem?</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus non ad porro atque quisquam pariatur
+                    distinctio sint similique ipsa nisi labore impedit, beatae, reiciendis neque minima recusandae
+                    mollitia necessitatibus exercitationem?</p>
                 <img src="images/pic-1.png" alt="foto-cliente" class="user">
                 <h3>Matheus Garcia</h3>
-                <div class="stars"> 
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
+                <div class="stars">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
                 </div>
             </div>
             <div class="box">
                 <img src="images/quote-img.png" alt="destaque">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus non ad porro atque quisquam pariatur distinctio sint similique ipsa nisi labore impedit, beatae, reiciendis neque minima recusandae mollitia necessitatibus exercitationem?</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus non ad porro atque quisquam pariatur
+                    distinctio sint similique ipsa nisi labore impedit, beatae, reiciendis neque minima recusandae
+                    mollitia necessitatibus exercitationem?</p>
                 <img src="images/pic-2.png" alt="foto-cliente" class="user">
                 <h3>Ana Clara</h3>
-                <div class="stars"> 
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
+                <div class="stars">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
                 </div>
             </div>
             <div class="box">
                 <img src="images/quote-img.png" alt="destaque">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus non ad porro atque quisquam pariatur distinctio sint similique ipsa nisi labore impedit, beatae, reiciendis neque minima recusandae mollitia necessitatibus exercitationem?</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus non ad porro atque quisquam pariatur
+                    distinctio sint similique ipsa nisi labore impedit, beatae, reiciendis neque minima recusandae
+                    mollitia necessitatibus exercitationem?</p>
                 <img src="images/pic-3.png" alt="foto-cliente" class="user">
                 <h3>Lucas Freire</h3>
-                <div class="stars"> 
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
-                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
-                    <img wid3h="30" heig3t="30" src="https://img.icons8.com/ios-filled/30/ffffff/star-half-empty.png" alt="star-half-empty"/>
+                <div class="stars">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img wid3h="30" heig3t="30" src="https://img.icons8.com/ios-filled/30/ffffff/star-half-empty.png"
+                        alt="star-half-empty" />
                 </div>
             </div>
         </div>
     </section>
     <section class="address" id="address">
-        <h2 class="title";>Nosso <span>Endereço</span></h2>
-        
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3719.5139014948372!2d-50.43118372225979!3d-21.211460879494435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x949641dc081c0c29%3A0xb254761ab409b7ed!2sVenda%20da%20Vila!5e0!3m2!1sen!2sbr!4v1767450878405!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+        <h2 class="title" ;>Nosso <span>Endereço</span></h2>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3719.5139014948372!2d-50.43118372225979!3d-21.211460879494435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x949641dc081c0c29%3A0xb254761ab409b7ed!2sVenda%20da%20Vila!5e0!3m2!1sen!2sbr!4v1767450878405!5m2!1sen!2sbr"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
-
     <section class="footer">
         <div class="share">
-            <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png" alt="instagram-new"/>
-            <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffffff/facebook-new.png" alt="facebook-new"/>
-            <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffffff/twitterx--v2.png" alt="twitterx--v2"/>
+            <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png"
+                alt="instagram-new" />
+            <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffffff/facebook-new.png"
+                alt="facebook-new" />
+            <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffffff/twitterx--v2.png"
+                alt="twitterx--v2" />
         </div>
     </section>
 </body>
