--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
                 alt="twitterx--v2" />
         </div>
     </section>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quis omnis facilis commodi consequatur cumque, iusto quam dolorum expedita neque repellendus fugit. Magni illum, illo vel cumque doloremque eum hic?</p>
 </body>
 
 </html>
