--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 alt="twitterx--v2" />
         </div>
     </section>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quis omnis facilis commodi consequatur cumque, iusto quam dolorum expedita neque repellendus fugit. Magni illum, illo vel cumque doloremque eum hic?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quis omnis facilis commodi consequatur cumque, iusto quam dolorum expedita neque repellendus fugit. Magni illum, illo vel cumque doloremque eum hic?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic veniam temporibus sed soluta magnam iste dolor dignissimos odio incidunt provident? Eaque vel harum ullam voluptates non eum aliquid qui rerum.</p>
 </body>
 
 </html>
